# pixelizer

./: .gitignore  LICENSE  OVERVIEW.md  README.md  app.py  palettes.yml  pyproject.toml  requirements.txt  setup.cfg
pixelizer/: __init__.py  cli.py  data.py  file.py  filters.py  image.py  live.py  sample.py  utils.py  video.py
tests/: test_cli.py  test_filters.py  test_image_smoke.py  test_live_import.py  test_utils.py
tests/data/: README
