[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelizer"
version = "0.1.0"
description = "Image pixelation tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "kmkroski" } ]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
pixelizer = "pixelizer.cli:main"
